test_scripts/semantic_errors/logical_type_error.sp
bool result = 10 && 5;
